scotia-peru-aks/viya/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-decisions-framework/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-businessRules
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-business-rules
    sas.com/admin: namespace
  name: sas-business-rules
spec:
  host: $(INGRESS_HOST)
  path: /businessRules
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-business-rules
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-businessRules
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-business-rules
    sas.com/admin: namespace
  name: sas-business-rules-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /businessRules
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-business-rules
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-decisions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions
    sas.com/admin: namespace
  name: sas-decisions
spec:
  host: $(INGRESS_HOST)
  path: /decisions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-decisions
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-decisions
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions
    sas.com/admin: namespace
  name: sas-decisions-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /decisions
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-decisions
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-referenceData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-reference-data
    sas.com/admin: namespace
  name: sas-reference-data
spec:
  host: $(INGRESS_HOST)
  path: /referenceData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-reference-data
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-referenceData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-reference-data
    sas.com/admin: namespace
  name: sas-reference-data-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /referenceData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-reference-data
  wildcardPolicy: Subdomain
